# bots

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  config.template.yaml  justfile  prek.toml  pyproject.toml  run.sh
.github/workflows/: build-and-test.yaml
common/: i18n.py  requirements-dev.txt  requirements.txt
common/application/: arg_parsers.py  constants.py  translation.py
common/application/gateways/: grpc_integration_gateway.py
common/application/protocols/: integration_gateway.py  messenger_adapter.py  translator.py
common/application/services/: chat_service.py  subscription_service.py  verification_service.py
common/config/: ConfigParser.py  bot_config.py  config_parser.py
common/config/schemas/: GrpcConfig.py  KafkaConfig.py  KafkaTopicsConfig.py  app_config.py  base_enum_model.py  grpc_config.py  kafka_config.py  kafka_topics_config.py  tls_config.py
common/contracts/: app_redirect.py  incoming_command.py  incoming_message.py  interaction.py
common/contracts/choice/: choice.py  choice_prompt.py  option_selection.py
common/grpc/: absolute_path_patch.py  generate.sh
common/infrastructure/: logging.py
common/infrastructure/grpc/: generate.py  generate.sh
common/infrastructure/i18n/: i18n.py  mappings.py  translator.py
common/infrastructure/kafka/: EventHandler.py  __init__.py  event_handler.py  integration_events.py  notification_renderer.py
common/infrastructure/kafka/consumers/: GlobalConsumer.py  global_consumer.py
common/infrastructure/kafka/enums/: time_remaining.py
common/infrastructure/kafka/schemas/: AccountLinkageEvent.py  NotificationEvent.py  OtpEvent.py  account_linkage_event.py  base_kafka_event.py  notification_event.py  (+1 more)
common/kafka/: EventHandler.py
common/kafka/consumers/: GlobalConsumer.py
common/kafka/schemas/: NotificationEvent.py  OtpEvent.py
common/logic/: enums.py
common/logic/command_parsers/: __init__.py  command_parsers.py  parse_command.py  parse_message.py
common/logic/grpc/: GrpcClient.py  GrpcResponse.py
console/src/: adapter.py  kafka_consumer.py  main.py
telegram/: requirements.txt
telegram/src/: adapter.py  bot.py  kafka_consumer.py  kafka_consumers.py  main.py
telegram/src/exceptions/: AccessDeniedException.py  InvalidChatException.py  __init__.py  invalid_message_format_exception.py
telegram/src/mapping/: callbacks.py  commands.py  messages.py
telegram/src/middleware/: ServiceMiddleware.py  service_middleware.py
telegram/src/routers/: chat_router.py  help_router.py  subscription_router.py  util_router.py  verification_router.py
telegram/src/services/: ChatService.py  MessageService.py  SubscriptionService.py  VerificationService.py  help_service.py  util_service.py
telegram/src/validation/: require.py
tests/common/application/: test_arg_parsers.py  test_translation_keys.py
tests/common/config/: test_config_parser.py
tests/telegram/: test_kafka_consumer.py
translations/: en.yaml  en.yml  ru.yaml  ru.yml
(+15 files in other folders)
