[project]
name = "deadlines-bots"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.14.0,<0.15.0",
    "grpcio==1.82.1",
    "grpcio-tools==1.82.1",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "python-i18n==0.3.9",
    "pyyaml==6.0.3",
    "telegramify-markdown==1.2.0",
]

[project.optional-dependencies]
telegram = [
    "aiogram~=3.29.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
add-bounds = "major"

[tool.ruff]
target-version = "py314"
exclude = [
    "common/infrastructure/grpc/generated",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "PL",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["PLR2004"]
